更新库和例子

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,6 +3,6 @@ link_directories(../lib)
 find_package(Threads REQUIRED)
 
 # 构建客户端示例
-add_executable(stance_example StanceExample.cpp)
-target_link_libraries(stance_example PRIVATE libfire_client_sdk.a Threads::Threads)
+add_executable(walk_example walkExample.cpp)
+target_link_libraries(walk_example PRIVATE libfire_client_sdk.a Threads::Threads)
 
